name:                parser-combinators
version:             0.1.0.0
synopsis:            Monadic Parser Combinators
description:         Please see README.md
homepage:            https://github.com/acamino/parser-combinators
license:             MIT
license-file:        LICENSE
author:              Agustin Camino
maintainer:          agustin.camino@gmail.com
copyright:           Copyright (c) 2017 Agustin Camino
category:            Parsers
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , ArithmeticExpr
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParserSpec
                       ArithmeticExprSpec
  build-depends:       base
                     , hspec
                     , parser-combinators
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/acamino/parser-combinators
